--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 </head>
 
 <body>
+    <input id="directoryPath" type="file" webkitdirectory="">
+    <button id="getMovieRatings">get movie ratings</button>
     <div id="main">
 
     </div>
+
     <script>
         const showFileMovieRatings = require('./index.js');
-        showFileMovieRatings.show('main');
+        document.getElementById('getMovieRatings').addEventListener('click', (e) => {
+            const directoryPath = document.getElementById('directoryPath').files[0].path;
+            showFileMovieRatings.show(directoryPath, 'main');
+        });
     </script>
 </body>
 
